2004-05-05  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* lily/music-head.cc (LY_DEFINE): change order of args.

	* input/regression/music-head.ly (texidoc): new file.

	* lily/parser.yy (Generic_prefix_music): allow generic
	music-transformation functions.	

	* lily/include/music-head.hh (is_music_head): new file.

	* lily/music-head.cc (get_music_head_transform): new file.

2004-05-04  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* lily/ottava-bracket.cc (print): use coordinate, not (0,0) for
	empty extent. This fixes ottava brackets on rests. (backportme)

	* make/lilypond.redhat.spec.in (Group): ln png files for info.

	* lily/piano-pedal-engraver.cc (create_text_grobs): core dump fix.

	* cygwin/lily-wins.py: update for the lily-wins.py script.

2004-05-03  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* lily/score-engraver.cc (typeset_all): switch off unbound spanner
	code. This will obviate typeset_grob () in the future.  The effect
	of this is that improperly written spanner handling will result in
	invalid spanner bounds.
	(announce_grob): add to elems_ from here
	(typeset_grob): comment out.  

	* lily/include/engraver.hh (make_spanner): new calling interface
	for make_{item,spanner}. This obviates most calls to
	announce_grob().
		
	* scm/music-functions.scm (set-accidental-style): use GrandStaff
	iso. PianoStaff for piano styles.

2004-05-03  Heikki Junes <hjunes@cc.hut.fi>

	* Documentation/user/music-glossary.tely: add segno after d.s.

2004-05-02  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* lily/include/audio-column.hh: remove unused variables.
	(patch by Michael Welsh Duggan)

	* flower/include/axes.hh (other_axis): inline Axes function
	(thanks to David Brandon).

2004-05-02  Jan Nieuwenhuizen  <janneke@gnu.org>

	* cygwin/mknetrel: Install image links (backportme).

	* Documentation/user/GNUmakefile (local-install-info): Activate
	actual installing of image links (backportme).

2004-04-30  Mats Bengtsson  <mabe@drongo.s3.kth.se>
