@@ -1,13 +1,13 @@
 \header
 {
-texidoc = "Music heads are generic music transformation functions,
+texidoc = "Music function are generic music transformation functions,
 which can be used to extend music syntax seamlessly."
 
 }
 \version "2.3.1"
 
 #(define myBar
-  (ly:make-music-head
+  (ly:make-music-function
    (list string?)
    (lambda (where type)
     (context-spec-music
